[package]
name = "hit"
version = "0.1.0"
authors = ["Yawara ISHIDA <ni732h.sphl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.6.0"
serde = "1.0.97"
hex = "0.3.2"
byteorder = "1.3.2"
flate2 = "1.0.9"
chrono = "0.4.7"